# cine2cal

./: .gitignore  README.md  cine2cal.py  cinemateket.py  client_secret.json  dcal.py  pyproject.toml  requirements.txt  testcal.py
