[project]
name = "cine2cal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "google>=3.0.0",
    "googleapi>=0.1.0",
    "halo>=0.0.31",
    "lxml>=5.3.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
